# Bleach

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  PROJECT_STATUS.md  README.md  README_OLD.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scrubbers/: __init__.py  scrubbers.py
tests/: test_scrubbers.py
